--- a/buildscripts/infrastructure/build-nodes/sles-15sp2/Dockerfile
+++ b/buildscripts/infrastructure/build-nodes/sles-15sp2/Dockerfile
@@ -165,5 +165,6 @@ RUN mkdir -p /home/jenkins/.cache/ \
 ARG VERS_TAG
 RUN echo $VERS_TAG > /version.txt
 
+ENV RUSTUP_HOME=/opt/rust/rustup
 LABEL \
     com.tribe29.image_type="build-image"
