--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/preset-typescript": "^7.16.0",
     "@types/crossfilter": "^0.0.34",
     "@types/d3": "^7.1.1",
+    "@types/d3-hexbin": "^0.2.3",
     "@types/dc": "^4.2.1",
     "@types/jquery": "^3.5.13",
     "@types/lodash": "^4.14.191",
