IWYU and clang-tidy configs are local to the components now.
Change-Id: I4df961b69a8f606472e32e885be4303bb51501a8

--- a/buildscripts/scripts/stages.yml
+++ b/buildscripts/scripts/stages.yml
@@ -93,12 +93,6 @@ VARIABLES:
     - NAME: CHANGED_CLANG_FORMAT_FILE
       SH: "echo '${CHANGED_FILES_REL}' | grep '^\\.clang-format$' || true"
 
-    - NAME: CHANGED_CLANG_TIDY_FILE
-      SH: "echo '${CHANGED_FILES_REL}' | grep '^\\.clang-tidy$' || true"
-
-    - NAME: CHANGED_IWYU_MAPPINGS
-      SH: "echo '${CHANGED_FILES_REL}' | grep '^livestatus/iwyu-mappings/' || true"
-
     - NAME: CHANGED_JS_FILES
       SH: "echo '${CHANGED_FILES_REL}' | grep '^web/htdocs/js/\\|\\.js$\\|\\.ts$' || true"
       REPLACE_NEWLINES: true
@@ -343,7 +337,7 @@ STAGES:
       RESULT_CHECK_FILE_PATTERN: "results/neb-unit.txt"
 
     - NAME: 'IWYU NEB'
-      ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_IWYU_MAPPINGS,CHANGED_CORE_FILES,CHANGED_LIVESTATUS_FILES,CHANGED_TESTS_MAKEFILE,CHANGED_ASIO_FILES,CHANGED_GOOGLETEST_FILES,CHANGED_RE2_FILES
+      ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_CORE_FILES,CHANGED_LIVESTATUS_FILES,CHANGED_TESTS_MAKEFILE,CHANGED_ASIO_FILES,CHANGED_GOOGLETEST_FILES,CHANGED_RE2_FILES
       DIR: 'tests'
       ENV_VARS:
         GERRIT_PATCHSET_REVISION: "${PATCHSET_REVISION}"
@@ -353,7 +347,7 @@ STAGES:
       RESULT_CHECK_FILE_PATTERN: "results/neb-iwyu.txt"
 
     - NAME: 'Clang Tidy NEB'
-      ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_CLANG_TIDY_FILE,CHANGED_CORE_FILES,CHANGED_LIVESTATUS_FILES,CHANGED_TESTS_MAKEFILE,CHANGED_ASIO_FILES,CHANGED_GOOGLETEST_FILES,CHANGED_RE2_FILES
+      ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_CORE_FILES,CHANGED_LIVESTATUS_FILES,CHANGED_TESTS_MAKEFILE,CHANGED_ASIO_FILES,CHANGED_GOOGLETEST_FILES,CHANGED_RE2_FILES
       DIR: 'tests'
       ENV_VARS:
         GERRIT_PATCHSET_REVISION: "${PATCHSET_REVISION}"
@@ -371,7 +365,7 @@ STAGES:
       RESULT_CHECK_FILE_PATTERN: "results/cmc-unit.txt"
 
     - NAME: 'IWYU CMC'
-      ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_IWYU_MAPPINGS,CHANGED_CORE_FILES,CHANGED_LIVESTATUS_FILES,CHANGED_TESTS_MAKEFILE,CHANGED_ASIO_FILES,CHANGED_GOOGLETEST_FILES,CHANGED_RE2_FILES
+      ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_CORE_FILES,CHANGED_LIVESTATUS_FILES,CHANGED_TESTS_MAKEFILE,CHANGED_ASIO_FILES,CHANGED_GOOGLETEST_FILES,CHANGED_RE2_FILES
       DIR: 'tests'
       ENV_VARS:
         GERRIT_PATCHSET_REVISION: "${PATCHSET_REVISION}"
@@ -381,7 +375,7 @@ STAGES:
       RESULT_CHECK_FILE_PATTERN: "results/cmc-iwyu.txt"
 
     - NAME: 'Clang Tidy CMC'
-      ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_CLANG_TIDY_FILE,CHANGED_CORE_FILES,CHANGED_LIVESTATUS_FILES,CHANGED_TESTS_MAKEFILE,CHANGED_ASIO_FILES,CHANGED_GOOGLETEST_FILES,CHANGED_RE2_FILES
+      ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_CORE_FILES,CHANGED_LIVESTATUS_FILES,CHANGED_TESTS_MAKEFILE,CHANGED_ASIO_FILES,CHANGED_GOOGLETEST_FILES,CHANGED_RE2_FILES
       DIR: 'tests'
       ENV_VARS:
         GERRIT_PATCHSET_REVISION: "${PATCHSET_REVISION}"
