--- a/packages/unixcat/src/CMakeLists.txt
+++ b/packages/unixcat/src/CMakeLists.txt
@@ -28,6 +28,6 @@ set(lib_livestatus_include ${root_repo_dir}/packages/livestatus/include)
 target_include_directories(unixcat PRIVATE ${lib_livestatus_include}
                                            ${asio_ext_include})
 
-target_link_libraries(unixcat PRIVATE -static pthread)
+target_link_libraries(unixcat PRIVATE pthread)
 
 target_compile_features(unixcat PUBLIC cxx_std_17)
