--- a/omd/WORKSPACE
+++ b/omd/WORKSPACE
@@ -36,100 +36,133 @@ rules_pkg_dependencies()
 #   |          |_| /_/   \_\____|_|\_\/_/   \_\____|_____|____/            |
 #   |                                                                      |
 #   '----------------------------------------------------------------------'
-
+load(
+    "//:package_versions.bzl",
+    "FREETDS_SHA256",
+    "FREETDS_VERSION",
+    "HEIRLOOMMAILX_SHA256",
+    "HEIRLOOMMAILX_VERSION",
+    "HEIRLOOM_PKGTOOLS_SHA256",
+    "HEIRLOOM_PKGTOOLS_VERSION",
+    "LCAB_SHA256",
+    "LCAB_VERSION",
+    "LIBGSF_SHA256",
+    "LIBGSF_VERSION",
+    "MONITORING_PLUGINS_SHA256",
+    "MONITORING_PLUGINS_VERSION",
+    "MSITOOLS_SHA256",
+    "MSITOOLS_VERSION",
+    "NRPE_SHA256",
+    "NRPE_VERSION",
+    "OPENSSL_SHA256",
+    "OPENSSL_VERSION",
+    "PATCH_SHA256",
+    "PATCH_VERSION",
+    "PYTHON_SHA256",
+    "PYTHON_VERSION",
+    "REDIS_SHA256",
+    "REDIS_VERSION",
+    "SNAP7_SHA256",
+    "SNAP7_VERSION",
+    "STUNNEL_SHA256",
+    "STUNNEL_VERSION",
+    "XMLSEC1_SHA256",
+    "XMLSEC1_VERSION",
+)
 load("//packages/patch:patch_http.bzl", "patch")
 
 patch(
-    sha256 = "8cf86e00ad3aaa6d26aca30640e86b0e3e1f395ed99f189b06d4c9f74bc58a4e",
-    version_str = "2.7.6",
+    sha256 = PATCH_SHA256,
+    version_str = PATCH_VERSION,
 )
 
 load("//packages/redis:redis_http.bzl", "redis")
 
 redis(
-    sha256 = "5b2b8b7a50111ef395bf1c1d5be11e6e167ac018125055daa8b5c2317ae131ab",
-    version_str = "6.2.6",
+    sha256 = REDIS_SHA256,
+    version_str = REDIS_VERSION,
 )
 
 load("//packages/openssl:openssl_http.bzl", "openssl")
 
 openssl(
-    sha256 = "8dee9b24bdb1dcbf0c3d1e9b02fb8f6bf22165e807f45adeb7c9677536859d3b",
-    version_str = "1.1.1t",
+    sha256 = OPENSSL_SHA256,
+    version_str = OPENSSL_VERSION,
 )
 
 load("//packages/xmlsec1:xmlsec1_http.bzl", "xmlsec1")
 
 xmlsec1(
-    sha256 = "5f8dfbcb6d1e56bddd0b5ec2e00a3d0ca5342a9f57c24dffde5c796b2be2871c",
-    version_str = "1.2.37",
+    sha256 = XMLSEC1_SHA256,
+    version_str = XMLSEC1_VERSION,
 )
 
 load("//packages/heirloom-mailx:heirloom-mailx_http.bzl", "heirloommailx")
 
 heirloommailx(
-    sha256 = "015ba4209135867f37a0245d22235a392b8bbed956913286b887c2e2a9a421ad",
-    version_str = "12.5",
+    sha256 = HEIRLOOMMAILX_SHA256,
+    version_str = HEIRLOOMMAILX_VERSION,
 )
 
 load("//packages/monitoring-plugins:monitoring-plugins_http.bzl", "monitoring_plugins")
 
 monitoring_plugins(
-    sha256 = "7023b1dc17626c5115b061e7ce02e06f006e35af92abf473334dffe7ff3c2d6d",
-    version_str = "2.3.3",
+    sha256 = MONITORING_PLUGINS_SHA256,
+    version_str = MONITORING_PLUGINS_VERSION,
 )
 
 load("//packages/stunnel:stunnel_http.bzl", "stunnel")
 
 stunnel(
-    sha256 = "c74c4e15144a3ae34b8b890bb31c909207301490bd1e51bfaaa5ffeb0a994617",
-    version_str = "5.63",
+    sha256 = STUNNEL_SHA256,
+    version_str = STUNNEL_VERSION,
 )
 
 load("//packages/freetds:freetds_http.bzl", "freetds")
 
 freetds(
-    sha256 = "be7c90fc771f30411eff6ae3a0d2e55961f23a950a4d93c44d4c488006e64c70",
-    version_str = "0.95.95",
+    sha256 = FREETDS_SHA256,
+    version_str = FREETDS_VERSION,
 )
 
 load("//packages/heirloom-pkgtools:heirloom-pkgtools_http.bzl", "heirloom_pkgtools")
 
 heirloom_pkgtools(
-    sha256 = "aa94d33550847d57c62138cabd0f742d4af2f14aa2bfb9e9d4a9427bf498e6cc",
-    version_str = "070227",
+    sha256 = HEIRLOOM_PKGTOOLS_SHA256,
+    version_str = HEIRLOOM_PKGTOOLS_VERSION,
 )
 
 load("//packages/libgsf:libgsf_http.bzl", "libgsf")
 
 libgsf(
-    sha256 = "68bede10037164764992970b4cb57cd6add6986a846d04657af9d5fac774ffde",
-    version_str = "1.14.44",
+    sha256 = LIBGSF_SHA256,
+    version_str = LIBGSF_VERSION,
 )
 
 load("//packages/lcab:lcab_http.bzl", "lcab")
 
 lcab(
-    sha256 = "065f2c1793b65f28471c0f71b7cf120a7064f28d1c44b07cabf49ec0e97f1fc8",
-    version_str = "1.0b12",
+    sha256 = LCAB_SHA256,
+    version_str = LCAB_VERSION,
 )
 
 load("//packages/msitools:msitools_http.bzl", "msitools")
 
 msitools(
-    sha256 = "ebbdd9aa714a6a6ada4450aff5e86351cf910d09b24a85645425737602d75df5",
-    version_str = "0.94",
+    sha256 = MSITOOLS_SHA256,
+    version_str = MSITOOLS_VERSION,
 )
 
 load("//packages/snap7:snap7_http.bzl", "snap7")
 
 snap7(
-    sha256 = "fe137737b432d95553ebe5d5f956f0574c6a80c0aeab7a5262fb36b535df3cf4",
-    version_str = "1.4.2",
+    sha256 = SNAP7_SHA256,
+    version_str = SNAP7_VERSION,
 )
 
 load("//packages/perl-modules:perl-modules_http.bzl", "perl_modules")
 
+# TODO: Centralize perl modules versions
 perl_modules()
 
 load("//:bazel_variables.bzl", "UPSTREAM_MIRROR_URL")
@@ -152,12 +185,11 @@ http_archive(
 load("//packages/nrpe:nrpe_http.bzl", "nrpe")
 
 nrpe(
-    sha256 = "8ad2d1846ab9011fdd2942b8fc0c99dfad9a97e57f4a3e6e394a4ead99c0f1f0",
-    version_str = "3.2.1",
+    sha256 = NRPE_SHA256,
+    version_str = NRPE_VERSION,
 )
 
 load("//packages/Python:Python_http.bzl", "python")
-load("//:package_versions.bzl", "PYTHON_SHA256", "PYTHON_VERSION")
 
 python(
     sha256 = PYTHON_SHA256,
