--- a/omd/packages/Python/BUILD.Python.bazel
+++ b/omd/packages/Python/BUILD.Python.bazel
@@ -85,6 +85,13 @@ configure_make(
         # For now 'OMD_VERSION' is not yet available in Bazel, therefore we use a well defined placeholder
         sed -i "s|$py_install_dir|/replace-me|g" $sysconfig_path;
 
+        # include & lib of openssl are found under different paths...
+        sed -i "s|$EXT_BUILD_DEPS/openssl/include|/replace-me/include/openssl|g" $sysconfig_path;
+        sed -i "s|$EXT_BUILD_DEPS/openssl/lib|/replace-me/lib|g" $sysconfig_path;
+
+        # This one is not really helpful... but we don't want to have bazel paths in _sysconfig
+        sed -i "s|$BUILD_TMPDIR|/replace-me|g" $sysconfig_path;
+
         # Fix shebang of scripts
 	cd $bin_dir && \
 	sed -i 's|^#!'$py_install_dir'.*|#!/usr/bin/env python${pyMaj}|' 2to3 2to3-{pyMajMin} idle{pyMajMin} pydoc{pyMajMin};
