--- a/omd/packages/pnp4nagios/BUILD
+++ b/omd/packages/pnp4nagios/BUILD
@@ -3,6 +3,7 @@ exports_files(
         # needed to allow `diskspace` and `PNP4NAGIOS` to be used
         "diskspace",
         "PNP4NAGIOS",
+        "skel",
     ],
     visibility = ["//visibility:public"],
 )
