--- a/omd/packages/pnp4nagios/BUILD.pnp4nagios.bazel
+++ b/omd/packages/pnp4nagios/BUILD.pnp4nagios.bazel
@@ -4,7 +4,10 @@ filegroup(
     name = "all_srcs",
     srcs = glob(
         ["**/*"],
-        exclude = ["bazel-*"],
+        exclude = [
+            "bazel-*",
+            "BUILD",
+        ],
     ),
 )
 
@@ -59,6 +62,9 @@ configure_make(
         install -m 644 $BUILD_TMPDIR/COPYING $INSTALLDIR/share/doc/pnp4nagios
         install -m 644 $BUILD_TMPDIR/AUTHORS $INSTALLDIR/share/doc/pnp4nagios
         install -m 644 $BUILD_TMPDIR/THANKS  $INSTALLDIR/share/doc/pnp4nagios
+
+        # Do not ship kohana (unused pnp4nagios UI dependency)
+        rm -rf ${INSTALLDIR}/lib/kohana
     """,
     targets = [
         "all",
@@ -69,8 +75,7 @@ configure_make(
 genrule(
     name = "skel",
     srcs = [
-        "@omd_packages//packages/pnp4nagios/skel",
-        "@omd_packages//packages/pnp4nagios/skel:skel_root",
+        "@omd_packages//packages/pnp4nagios:skel",
         "@omd_packages//packages/pnp4nagios:diskspace",
         "@omd_packages//packages/pnp4nagios:PNP4NAGIOS",
     ],
@@ -107,7 +112,7 @@ genrule(
         "lib/omd/hooks/PNP4NAGIOS",
     ],
     cmd = """
-        cp -r --dereference $$(dirname $(execpath @omd_packages//packages/pnp4nagios/skel:skel_root)) $$(realpath $(RULEDIR))
+        cp -r --dereference $(execpath @omd_packages//packages/pnp4nagios:skel) $$(realpath $(RULEDIR))
         mkdir -p $$(realpath $(RULEDIR))/share
         cp --dereference $(execpath @omd_packages//packages/pnp4nagios:diskspace) $$(realpath $(RULEDIR))/share/diskspace/pnp4nagios
         mkdir -p $$(realpath $(RULEDIR))/lib/omd/hooks/
