Typed tests.testlib
Change-Id: Id55d9438682c92e256d968986a15633909d8b0ff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -132,8 +132,7 @@ module = [
     "cmk.update_config.*",
     "cmk.utils.crypto.*",
     "tests.gui_e2e.*",
-    "tests.testlib.event_console",
-    "tests.testlib.playwright.*",
+    "tests.testlib.*",
     "tests.unit.cmk.ec.*",
     "tests.unit.cmk.update_config.*",
 ]
