--- a/mypy-raw.ini
+++ b/mypy-raw.ini
@@ -30,7 +30,7 @@ init_typed = true
 warn_required_dynamic_aliases = true
 warn_untyped_fields = true
 
-[mypy-cmk.gui.background_job,cmk.gui.backup,cmk.utils.crypto.*,cmk.gui.plugins.views.mobile,cmk.gui.views.layout,cmk.notification_plugins.*,cmk.update_config.*,tests.gui_e2e.*,tests.testlib.event_console,tests.testlib.playwright.*,tests.unit.cmk.ec.*,tests.unit.cmk.update_config.*]
+[mypy-cmk.gui.background_job,cmk.gui.backup,cmk.utils.crypto.*,cmk.gui.plugins.views.mobile,cmk.gui.views.layout,cmk.notification_plugins.*,cmk.update_config.*,tests.gui_e2e.*,tests.testlib.*,tests.unit.cmk.ec.*,tests.unit.cmk.update_config.*]
 disallow_untyped_calls = true
 disallow_untyped_defs = true
 warn_return_any = true
