Revert "Typed tests.testlib"
This reverts commit faf6e8f81ba5772cc9b4e282c0d73ac32b9ee672.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -132,7 +132,8 @@ module = [
     "cmk.update_config.*",
     "cmk.utils.crypto.*",
     "tests.gui_e2e.*",
-    "tests.testlib.*",
+    "tests.testlib.event_console",
+    "tests.testlib.playwright.*",
     "tests.unit.cmk.ec.*",
     "tests.unit.cmk.update_config.*",
 ]
