switch package neb to cmake
TESTS done:
local build
local build with file change
local ./.f12 wwith validation livestatus
test gerrit with validation compilation started
test gerrit again(retrigger)
integration
testbuild

Change-Id: I029306084f03189db7315c9bbd65ce1919322279

--- a/buildscripts/scripts/stages.yml
+++ b/buildscripts/scripts/stages.yml
@@ -94,6 +94,10 @@ VARIABLES:
       SH: "echo '${CHANGED_FILES_REL}' | grep '^packages/livestatus/' || true"
       REPLACE_NEWLINES: true
 
+    - NAME: CHANGED_NEB_FILES
+      SH: "echo '${CHANGED_FILES_REL}' | grep '^packages/neb/' || true"
+      REPLACE_NEWLINES: true
+
     - NAME: CHANGED_CLANG_FORMAT_FILE
       SH: "echo '${CHANGED_FILES_REL}' | grep '^\\.clang-format$' || true"
 
@@ -334,38 +338,18 @@ STAGES:
       RESULT_CHECK_FILE_PATTERN: "results/unixcat.txt"
 
     - NAME: 'NEB/CMC Compile'
-      ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_CORE_FILES,CHANGED_LIVESTATUS_FILES,CHANGED_ASIO_FILES,CHANGED_GOOGLETEST_FILES,CHANGED_RE2_FILES
+      ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_CORE_FILES,CHANGED_LIVESTATUS_FILES,CHANGED_NEB_FILES,CHANGED_ASIO_FILES,CHANGED_GOOGLETEST_FILES,CHANGED_RE2_FILES
       COMMAND: "make compile-neb-cmc-docker &> ${RESULTS}/neb-cmc-compile.txt"
       RESULT_CHECK_TYPE: "GCC"
       RESULT_CHECK_FILE_PATTERN: "results/neb-cmc-compile.txt"
 
-    - NAME: 'Unit Test NEB'
-      ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_CORE_FILES,CHANGED_LIVESTATUS_FILES,CHANGED_ASIO_FILES,CHANGED_GOOGLETEST_FILES,CHANGED_RE2_FILES
-      DIR: 'packages/neb/test'
-      COMMAND: "./.f12 &> ${RESULTS}/neb-unit.txt"
+    - NAME: 'Test - NEB'
+      ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_LIVESTATUS_FILES,CHANGED_NEB_FILES,CHANGED_ASIO_FILES,CHANGED_GOOGLETEST_FILES,CHANGED_RE2_FILES
+      DIR: 'packages/neb'
+      COMMAND: "../../scripts/run-in-docker.sh ./run --all &> ${RESULTS}/neb.txt"
       TEXT_ON_SKIP: 'No NEB files changed'
       RESULT_CHECK_TYPE: "GCC"
-      RESULT_CHECK_FILE_PATTERN: "results/neb-unit.txt"
-
-    - NAME: 'IWYU NEB'
-      ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_CORE_FILES,CHANGED_LIVESTATUS_FILES,CHANGED_TESTS_MAKEFILE,CHANGED_ASIO_FILES,CHANGED_GOOGLETEST_FILES,CHANGED_RE2_FILES
-      DIR: 'tests'
-      ENV_VARS:
-        GERRIT_PATCHSET_REVISION: "${PATCHSET_REVISION}"
-      COMMAND: "make test-iwyu-livestatus-docker &> ${RESULTS}/neb-iwyu.txt"
-      TEXT_ON_SKIP: 'No NEB files changed'
-      RESULT_CHECK_TYPE: "GCC"
-      RESULT_CHECK_FILE_PATTERN: "results/neb-iwyu.txt"
-
-    - NAME: 'Clang Tidy NEB'
-      ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_CORE_FILES,CHANGED_LIVESTATUS_FILES,CHANGED_TESTS_MAKEFILE,CHANGED_ASIO_FILES,CHANGED_GOOGLETEST_FILES,CHANGED_RE2_FILES
-      DIR: 'tests'
-      ENV_VARS:
-        GERRIT_PATCHSET_REVISION: "${PATCHSET_REVISION}"
-      COMMAND: "make test-tidy-livestatus-docker &> ${RESULTS}/neb-tidy.txt"
-      TEXT_ON_SKIP: 'No NEB files changed'
-      RESULT_CHECK_TYPE: "CLANG"
-      RESULT_CHECK_FILE_PATTERN: "results/neb-tidy.txt"
+      RESULT_CHECK_FILE_PATTERN: "results/neb.txt"
 
     - NAME: 'Unit Test CMC'
       ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_CORE_FILES,CHANGED_LIVESTATUS_FILES,CHANGED_ASIO_FILES,CHANGED_GOOGLETEST_FILES,CHANGED_RE2_FILES
