move enterprise/core/src to packages/cmc
This is a move, no special changes with exceptions:
1. httplib sub package dependency is file based, again to make CI happy.
2. asio sub package dependency is file based, again to make CI happy.
Above mentioned poisiton will disappear on conversion to cmake

Tests:
- local make abd get new cmc in heute with cgeck in core mode with lq
- check local build .f12 package(with and without mrclean)
- check testbuild is green and cmc is present
- check integration single green
- gerrit check build multiply times(retrigger)

Change-Id: I40037bfc396f867397e7c22fb4aa5425ae9b6bb2

--- a/buildscripts/scripts/stages.yml
+++ b/buildscripts/scripts/stages.yml
@@ -83,7 +83,7 @@ VARIABLES:
       REPLACE_NEWLINES: true
 
     - NAME: CHANGED_CORE_FILES
-      SH: "echo '${CHANGED_FILES_REL}' | grep -e '^livestatus' -e '^enterprise/core' || true"
+      SH: "echo '${CHANGED_FILES_REL}' | grep -e '^livestatus' -e '^packages/cmc' || true"
       REPLACE_NEWLINES: true
 
     - NAME: CHANGED_UNIXCAT_FILES
@@ -353,7 +353,7 @@ STAGES:
 
     - NAME: 'Unit Test CMC'
       ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_CORE_FILES,CHANGED_LIVESTATUS_FILES,CHANGED_ASIO_FILES,CHANGED_GOOGLETEST_FILES,CHANGED_RE2_FILES
-      DIR: 'enterprise/core/src/test'
+      DIR: 'packages/cmc/test'
       COMMAND: "./.f12 &> ${RESULTS}/cmc-unit.txt"
       TEXT_ON_SKIP: 'No CMC files changed'
       RESULT_CHECK_TYPE: "GCC"
