Fix a few implicit reexports
Were over 4000 warnings, now less than 1000.

Transient reexports are a major pain point when moving/splitting
modules.  Let's reduce that or, at least, make it explicit.

Change-Id: I701e747645bd7886c29b98642739b64273d8d7cb

--- a/.pylintrc
+++ b/.pylintrc
@@ -25,6 +25,9 @@ signature-mutators=cmk.utils.store.with_lock_dict
 
 [MESSAGES CONTROL]
 disable=
+    # Not useless if that's exporting a type as done often enough
+    # in the standard library.
+    useless-import-alias,
     # Use local suppressions or (even better) refactor the code.
     import-outside-toplevel,
     #---------------------------------------------------------------------------
