modify linux_commands to not destroy symlinks after build
Change-Id: Ia2adcd1a40d0f5990b894a1d84bfe09c594b509b

Remove symlinking workarounds from our buildfiles

Change-Id: I6ba749a3b3fc985a28867543dd8394d7ac741045

--- a/omd/packages/Python/BUILD.Python.bazel
+++ b/omd/packages/Python/BUILD.Python.bazel
@@ -33,12 +33,18 @@ config_setting(
 )
 
 out_binaries = [
+    "python%s" % PYTHON_VERSION_MAJOR,
     "python%s" % PYTHON_MAJOR_DOT_MINOR,
     "pip%s" % PYTHON_VERSION_MAJOR,
+    "pip%s" % PYTHON_VERSION_MAJOR,
     "pip%s" % PYTHON_MAJOR_DOT_MINOR,
+    "2to3",
     "2to3-%s" % PYTHON_MAJOR_DOT_MINOR,
+    "idle%s" % PYTHON_VERSION_MAJOR,
     "idle%s" % PYTHON_MAJOR_DOT_MINOR,
+    "pydoc%s" % PYTHON_VERSION_MAJOR,
     "pydoc%s" % PYTHON_MAJOR_DOT_MINOR,
+    "python%s-config" % PYTHON_VERSION_MAJOR,
     "python%s-config" % PYTHON_MAJOR_DOT_MINOR,
 ]
 
