build livestatus by neb on change in livestatus
TESTS. Manual(touch, rename and ./run --all)

Change-Id: I56a5aceebaddcf67f5f27fdb757099e8d2c2fa4c

--- a/packages/neb/src/CMakeLists.txt
+++ b/packages/neb/src/CMakeLists.txt
@@ -62,6 +62,7 @@ ExternalProject_Add(
   SOURCE_DIR ${root_repo_dir}/packages/livestatus
   BINARY_DIR ${root_repo_dir}/packages/livestatus/build
   CONFIGURE_COMMAND ""
+  BUILD_ALWAYS 1
   BUILD_COMMAND ${root_repo_dir}/packages/livestatus/run --build
   INSTALL_COMMAND "")
 ExternalProject_Get_Property(livestatus BINARY_DIR)
