Remove BUILD_HOST.
Background: Calling execute_process() during CMake's configure stage
effectively forces a rebuild.  Doing this via a clever combination of
add_custom_command()/copy_if_changed/... might be a better solution, but
for now we just removed the parts which are not necessary or replace them
with predefined compiler macros. More to come...

Change-Id: I17a5a055971a5dbcf30e489a884c6a7ff61752cb

--- a/packages/neb/src/CMakeLists.txt
+++ b/packages/neb/src/CMakeLists.txt
@@ -21,8 +21,6 @@ set(neb_sources MacroExpander.cc module.cc NebCore.cc NebHost.cc NebService.cc
                 TimeperiodsCache.cc)
 
 # variables for build
-execute_process(COMMAND uname -n OUTPUT_VARIABLE CURRENT_BUILD_HOST)
-string(REPLACE "\n" "" CURRENT_BUILD_HOST ${CURRENT_BUILD_HOST})
 execute_process(COMMAND ${CMAKE_CXX_COMPILER} --version
                 OUTPUT_VARIABLE BUILD_CXX)
 string(REPLACE "\n" ";" BUILD_CXX ${BUILD_CXX})
@@ -76,10 +74,8 @@ target_include_directories(
              ${root_repo_dir}/packages/livestatus/include)
 
 target_compile_definitions(
-  neb
-  PRIVATE VERSION="${CMAKE_PROJECT_VERSION}"
-          BUILD_HOSTNAME="${CURRENT_BUILD_HOST}" BUILD_CXX="${BCXX}"
-          BUILD_DATE="${CURRENT_BUILD_DATE}")
+  neb PRIVATE VERSION="${CMAKE_PROJECT_VERSION}" BUILD_CXX="${BCXX}"
+              BUILD_DATE="${CURRENT_BUILD_DATE}")
 
 target_link_libraries(
   neb
