--- a/.gitignore
+++ b/.gitignore
@@ -95,6 +95,10 @@ tests/.hypothesis/
 /results
 /buildscripts/infrastructure/build-nodes/scripts/defines.make
 /buildscripts/docker_image_aliases/docker-image-alias-resolve-error.txt
+/bazel-bin
+/bazel-check_mk
+/bazel-out
+/bazel-testlogs
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode
