Deploy check_disk_smb from checkmk/active_checks and as nagios plugin
Change-Id: I02dcf14f622986f78b159f480117d1fc916b17e4
(cherry picked from commit 941d8ccb6baef609a33b7c81687d55b4a3fa2861)

--- a/omd/packages/monitoring-plugins/BUILD.monitoring-plugins.bazel
+++ b/omd/packages/monitoring-plugins/BUILD.monitoring-plugins.bazel
@@ -88,7 +88,9 @@ configure_make(
         #   we achieve the same result
 
         # remove files we don't want to be deployed
-        rm -f "$INSTALLDIR/libexec/check_ifoperstatus" "$INSTALLDIR/libexec/check_ifstatus"
+        # check_disk_smb is being deployed with check_mk.make, because it was migrated to Python
+        rm -f "$INSTALLDIR/libexec/check_ifoperstatus" "$INSTALLDIR/libexec/check_ifstatus" \
+        "$INSTALLDIR/libexec/check_disk_smb"
 
         mkdir -p "$INSTALLDIR/share/doc/monitoring-plugins"
         cp ACKNOWLEDGEMENTS AUTHORS CODING COPYING FAQ NEWS README REQUIREMENTS SUPPORT THANKS \
