Type network scan
Change-Id: I301e3214c8bd8b661ac46107dd78bb2a0f4471f7

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -134,6 +134,7 @@ module = [
     "cmk.gui.wato.pages.folders",
     "cmk.gui.watolib.bulk_discovery",
     "cmk.gui.watolib.main_menu",
+    "cmk.gui.watolib.network_scan",
     "cmk.gui.plugins.wato.utils.main_menu",
     "cmk.notification_plugins.*",
     "cmk.update_config.*",
